@@ -1,43 +1,33 @@
 package inventoryData.order;
 
+import fileHandlers.OrderPoolFileHandler;
 import inventoryData.InventoryDataItem;
 import inventoryData.product.Product;
 import utils.Observer;
 import utils.Subject;
 
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class OrderPool implements Subject {
-    private static final List<Order> allOrders = new ArrayList<>();
+    private static List<Order> allOrders = new ArrayList<>();
     private static int idCount = 0;
     private static Observer observer;
 
     public OrderPool(List<InventoryDataItem> orders) {
         for (InventoryDataItem item : orders) {
-            addOrder((Order) item);
+            allOrders.add((Order) item);
         }
-        int indexLastItem = allOrders.size() -1;
-        this.idCount = allOrders.get(indexLastItem).getId();
+        int indexLastItem = allOrders.size() - 1;
+        idCount = allOrders.get(indexLastItem).getId();
     }
 
-    public OrderPool() {}
-
-    public static List<Order> getOrders(Product selectedProduct) {
-        List<Order> result = allOrders.stream()
-                .filter(order -> order.getProduct().equals(selectedProduct))
-                .collect(Collectors.toList());
-        return result;
-    }
-
-    // This constructor is used only when reading from file.
-    // Hence, no need to notify observer to save to file.
-    private void addOrder(Order order) {
-        allOrders.add(order);
+    public OrderPool() {
     }
 
     public static List<Order> getAllOrders() {
+        updatePool();
         return allOrders;
     }
 
@@ -49,7 +39,6 @@ public class OrderPool implements Subject {
         observer.update(allOrders);
     }
 
-    // Avoidable nesting??
     public static boolean isAlreadyOrdered(Product product) {
         Order result = allOrders.stream()
                 .filter(order -> order.getProduct().equals(product))
@@ -58,19 +47,22 @@ public class OrderPool implements Subject {
         return (result != null);
     }
 
-    // Can a stream do this?
     public static int getOrderedQuantity(Product product) {
         int quantity = 0;
 
         List<Order> results = allOrders.stream()
-                .filter(order -> order.getProduct().equals(product))
-                .collect(Collectors.toList());
+                .filter(order -> order.getProduct().equals(product)).toList();
 
-        for (Order order: results) {
+        for (Order order : results) {
             quantity += order.getQuantity();
         }
 
         return quantity;
+    }
+
+    public static void confirmOrder(Order selectedOrder) {
+        selectedOrder.setConfirmed(true);
+        observer.update(allOrders);
     }
 
     public static void removeOrder(Order selectedOrder) {
@@ -78,8 +70,28 @@ public class OrderPool implements Subject {
         observer.update(allOrders);
     }
 
+    private static void updatePool() {
+        List<InventoryDataItem> items;
+        try {
+            OrderPoolFileHandler fileHandler = new OrderPoolFileHandler("assets/orderPool.txt");
+
+            items = fileHandler.readFile();
+            allOrders.clear();
+
+            for (InventoryDataItem item : items) {
+                allOrders.add((Order) item);
+            }
+            int indexLastItem = allOrders.size() - 1;
+            idCount = allOrders.get(indexLastItem).getId();
+        } catch (IOException e) {
+            System.out.println("Inventory data could not be updated from file.");
+        }
+    }
+
     @Override
-    public void registerObserver(Observer observer) { OrderPool.observer = observer; }
+    public void registerObserver(Observer observer) {
+        OrderPool.observer = observer;
+    }
 }
 
 
